# prometheus

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  INTEGRATION_PLAN.md  LICENSE  Makefile  PRODUCT_VISION.md  PROMETHEUS_BUILD_SPEC_PRD.md  README.md  SECURITY.md  prometheus-safe-launch.sh  prometheus.spec  prometheus_comms.py  pyproject.toml  run_prometheus.py  strix-safe-launch.sh  strix_tail.sh  x.com
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml
benchmarks/: README.md
containers/: Dockerfile  Dockerfile.independent  Dockerfile.local
docs/: README.md  benchmarks.md  contributing.mdx  docs.json  index.mdx  novel-threat-discovery-arxiv-research.md  quickstart.mdx
docs/advanced/: configuration.mdx  skills.mdx
docs/cloud/: overview.mdx
docs/integrations/: ci-cd.mdx  github-actions.mdx
docs/llm-providers/: anthropic.mdx  azure.mdx  bedrock.mdx  llm.yaml.example  local.mdx  novita.mdx  openai.mdx  openrouter.mdx  overview.mdx  vertex.mdx
docs/tools/: browser.mdx  overview.mdx  proxy.mdx  sandbox.mdx  terminal.mdx
docs/usage/: cli.mdx  instructions.mdx  scan-modes.mdx
prometheus/: __init__.py  config.yaml
prometheus/agents/: browser_session.py  factory.py  prompt.py
prometheus/agents/prompts/: system_prompt.jinja
prometheus/config/: __init__.py  hermes_bridge.py  llm_config.py  loader.py  model_options.py  models.py  nous_oauth.py  role_routing.py  role_routing.yaml  settings.py
prometheus/config/providers/: README.md  __init__.py  anthropic.py  base.py  custom.py  deepseek.py  openrouter.py  tokenrouter.py
prometheus/core/: __init__.py  agents.py  always_rejected.py  attack_surface.py  auto_report.py  auto_revalidate.py  candidate_fingerprint.py  candidate_normalizer.py  candidate_schema.py  candidate_store.py  chain_linker.py  comms.py  conditionally_valid.py  context_manager.py  cross_target.py  cve_watcher.py  deep_audit.py  execution.py  hooks.py  hypotheses.py  inputs.py  live_verification.py  n_run_voting.py  notifications.py  oauth_validation.py  openapi_sweep.py  orchestrator.py  outcome_feedback.py  paths.py  poc_validation.py  rate_limiter.py  recon.py  report_artifacts.py  run_manifest.py  runner.py  scan_goals.py  scan_persistence.py  scheduler.py  sessions.py  seven_question_gate.py  (+6 more)
prometheus/db/: __init__.py  migrations.py
prometheus/engagement/: __init__.py  manager.py  scope.py  state.py
prometheus/eval/: __init__.py
prometheus/eval/realvuln/: __init__.py  challenges.py  instruction.md  loader.py  normalizer.py  results.py  runner.py
prometheus/eval/xbow/: __init__.py  challenges.py  concurrency.py  flag_watch.py  loader.py  results.py  runner.py
prometheus/interface/: cli.py  defaults.py  main.py  model_cli.py  utils.py
prometheus/interface/assets/: tui_styles.tcss
prometheus/interface/tui/: __init__.py  app.py  automation_panels.py  findings_library.py  history.py  live_view.py  llm_knowledge.py  llm_knowledge.yaml  llm_meta.py  scan_launcher.py  security_feeds_panel.py
prometheus/playbooks/: hunt-account-enumeration.md  hunt-auth-bypass.md  hunt-cors.md  hunt-exposed-unauthenticated.md  hunt-idor.md  hunt-source-map.md  hunt-ssrf.md
prometheus/report/: __init__.py  dedupe.py  sarif.py  semantic_dedup.py  state.py  usage.py  writer.py
prometheus/runtime/: backends.py  caido_bootstrap.py  docker_client.py  session_manager.py
prometheus/skills/: README.md  __init__.py  evidence-hygiene.md  evidence_hygiene.py
prometheus/skills/cloud/: aws.md  azure.md  gcp.md
prometheus/skills/custom/: source_aware_sast.md
prometheus/skills/data/: always_rejected.json  conditionally_valid.json
prometheus/skills/frameworks/: django.md  express.md  laravel.md
prometheus/skills/protocols/: grpc.md
prometheus/skills/reconnaissance/: threat_feeds.md
prometheus/skills/scan_modes/: deep.md
prometheus/skills/technologies/: firebase_firestore.md
prometheus/skills/tooling/: arjun.md  browser_harness.md  dirsearch.md  nikto.md  nuclei.md  python.md  wafw00f.md  zaproxy.md
prometheus/skills/vulnerabilities/: ai_llm_attacks.md  clickjacking.md  cloud_credential_exploitation.md  cloudflare_credentials.md  container_escape.md  cors_misconfiguration.md  cryptographic_failures.md  csrf.md  deserialization.md  dns_network.md  exception_handling.md  graphql_attacks.md  information_disclosure.md  integrity_failures.md  js_bundle_analysis.md  ldap_injection.md  logging_monitoring_failures.md  mobile_api.md  oauth_vulnerabilities.md  open_redirect.md  pkce_downgrade.md  prototype_pollution.md  (+6 more)
prometheus/telemetry/: README.md  __init__.py  _common.py  logging.py  posthog.py  scarf.py
prometheus/tools/: __init__.py
prometheus/utils/: coerce.py  resource_paths.py
scripts/: daily_threat_summary.py  install.sh  nuclei_tor_scan.sh  prom_rl_loop.py  refresh_threat_intel.py  scan-pipeline.sh  setup_tor_proxy.sh  update_nuclei_templates.sh  update_threat_feeds.sh  xbow_run.sh
tests/: __init__.py  conftest.py  test_attack_surface.py  test_caido_hosted_saas_skip.py  test_caido_login_as_guest.py  test_caido_proxy_retry.py  test_candidate_pipeline.py  test_child_max_turns.py  test_circuit_breaker.py  test_context_manager.py  test_create_todo_blank_title.py  test_dedupe_connection_retry.py  test_docker_cleanup_409_retry.py  test_empty_input.py  test_event_sink_circuit.py  test_hermes_model_config.py  test_hypotheses.py  test_init_prometheus_db.py  test_llm_budget_preflight.py  test_log_regression_matrix.py  test_model_options.py  test_novel_reporting_gates.py  test_poc_validation_safe_execution.py  test_prom_rl_smoke.py  test_provider_helpers.py  test_replay_fix_log.py  test_report_retry_guard.py  test_report_title_quality.py  test_review_escalation.py  test_safe_exec_shutdown.py  test_scan_dedup.py  test_threat_intel_ghsa_str_guard.py  test_threat_intel_query_slug.py  test_todo_priority_synonyms.py  test_todo_tool_schemas.py  test_usage_cost.py  test_verification.py
tools/: check_no_external_telemetry.py
(+46 files in other folders)
