[project]
name = "prometheus-agent"
version = "1.0.0"
description = "AI-powered security scanner, validator, and novel threat discoverer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
  { name = "Stefan Carter", email = "stefan@withapurpose.co" },
]
keywords = [
  "cybersecurity",
  "security",
  "vulnerability",
  "scanner",
  "pentest",
  "agent",
  "ai",
  "cli",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Topic :: Security",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "openai-agents[litellm]==0.14.6",
  "pydantic>=2.11.3",
  "pydantic-settings>=2.13.0",
  "rich",
  "docker>=7.1.0",
  "textual>=6.0.0",
  "requests>=2.33.0",
  "cvss>=3.2",
  "caido-sdk-client>=0.2.0",
  "ddgs>=9.14.4",
]

[project.scripts]
prometheus = "prometheus.interface.main:main"

[dependency-groups]
dev = [
  "mypy>=1.16.0",
  "ruff>=0.11.13",
  "pyright>=1.1.401",
  "bandit>=1.8.3",
  "pre-commit>=4.2.0",
  "pyinstaller>=6.17.0; python_version >= '3.12' and python_version < '3.15'",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prometheus"]

# ============================================================================
# Type Checking Configuration
# ============================================================================

[tool.mypy]
python_version = "3.12"
strict = true
strict_optional = true
warn_redundant_casts = true
# `warn_unused_ignores = true` was producing 32 false-positive "unused-ignore"
# warnings on type: ignore comments that were still load-bearing for mypy
# itself, just not for the rule we configured. Suppress separately.
warn_unused_ignores = false
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = false  # `@function_tool` and SDK helpers lack stubs
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  # `@function_tool` is itself untyped
no_implicit_optional = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Allow some flexibility for third-party libraries
[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "rich.*",
    "jinja2.*",
    "textual.*",
    "cvss.*",
    "docker.*",
    "caido_sdk_client.*",
    "pydantic_settings.*",
    # `openai-agents` and the surrounding openai SDK ship partial stubs.
    "agents.*",
    "agents",
    "openai.*",
    "openai",
    "browser_harness.*",
    "browser_harness",
    "ddgs",
    "duckduckgo_search",
    "hermes_cli.*",
    "hermes_bridge",
    "nous_oauth",
    "NousPortal",
    # httpx / pydantic / packaging / urllib3 / yarl stubs are incomplete
    # in the installed versions.
    "httpx",
    "httpx.*",
    "pydantic",
    "pydantic.*",
    "packaging.*",
    "urllib3.*",
    "yarl",
    # Pygments / requests / yaml stubs aren't installed in the type-check env.
    "pygments.*",
    "requests",
    "requests.*",
    "yaml",
]
ignore_missing_imports = true
disable_error_code = [
    "import-untyped",     # third-party packages without stubs
    "untyped-decorator",  # @function_tool is itself untyped
    "no-untyped-call",    # SDK helpers have no stubs
    "no-any-return",      # SDK / pydantic return Any; we annotate honestly
    "union-attr",         # SDK Optional narrowing is brittle
    "var-annotated",      # too noisy on inferred-any locals
]

# ============================================================================
# Ruff Configuration (Fast Python Linter & Formatter)
# ============================================================================

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.lint]
# Curated rule set: keep the cheap, high-signal checks and drop the
# pedantic / stylistic ones that produced ~2,000 warnings on this codebase.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes (undefined names, unused imports, etc.)
    "I",   # isort
    "B",   # flake8-bugbear (likely bugs)
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "PIE", # flake8-pie
    "RUF", # Ruff-specific rules
    "T10", # flake8-debugger (no debugger statements)
    "T20", # flake8-print (no stray print())
    "PGH", # pygrep-hooks
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "YTT", # flake8-2020
    "ERA", # eradicate (commented-out code)
]
# Disabled rule families (kept here for traceability — uncomment to re-enable):
#   N, BLE, FBT, A, COM, C4, DTZ, EM, FA, ISC, ICN, G, INP, PYI, RSE, SLF,
#   TID, TCH, ARG, PTH, PD, PL, TRY, FLY, PERF

ignore = [
    "E501",   # Line too long — formatter handles wrapping; flag separately if needed
    "E741",   # Ambiguous variable name 'l' — readability preference
    "E722",   # bare except — sometimes intentional in test/CLI scripts
    "S101",   # Use of assert
    "S104",   # Possible binding to all interfaces
    "S105",   # Hardcoded password string — false positives on test fixtures / config
    "S107",   # Hardcoded password default — test fixtures use named strings
    "S108",   # Hardcoded temp file — we explicitly use /tmp/ for browser session
    "S301",   # Use of pickle
    "S310",   # Suspicious URL open — false positives on http calls
    "S311",   # Standard pseudo-random (we use it for non-crypto purposes)
    "S324",   # hashlib-insecure-hash-function — md5 used as non-crypto hash for simhash
    "S603",   # subprocess without shell=True (we invoke processes explicitly)
    "S607",   # start-process-with-partial-path (PATH lookups are intentional)
    "S608",   # hardcoded-sql-expression (false positives on parameterised queries)
    "B007",   # unused-loop-control-variable — readability preference
    "B008",   # function call in default argument (Pydantic / dataclass idioms)
    "B009",   # getattr with constant — used in monkey-patching / runtime patching
    "B010",   # setattr with constant — used in test scaffolding
    "B023",   # function-uses-loop-variable — sometimes intentional default capture
    "B904",   # raise-without-from-inside-except — readability preference
    "B905",   # zip without explicit strict= — Python 3.14 changes; opt-in
    "F401",   # unused-import — too noisy in this codebase; tracked separately
    "F402",   # import-shadowed-by-loop-var — sometimes intentional naming
    "F841",   # unused-variable — sometimes intentional (debugging hooks)
    "UP017",  # datetime-timezone-utc — keep for timezone-aware defaults
    "UP035",  # deprecated-import — keep compat with older type stubs
    "UP037",  # quoted-annotation — keep for explicit re-export modules
    "UP041",  # Replace aliased errors with TimeoutError — sometimes intentional
    "UP042",  # replace-str-enum — str-based Enum serialises cleanly to JSON
    "UP045",  # non-pep604-annotation-optional — keep Optional[X] for SDK compat
    "UP047",  # Generic function should use type parameters — used for Any list
    "Q000",   # bad-quotes-inline-string — formatter can fix globally with --fix
    "Q003",   # avoidable-escaped-quote — readability preference
    "PGH003", # blanket-type-ignore — explicit typed ignores would be better but
              # blanket is fine for SDK edge cases
    "PIE790", # unnecessary-pass — style preference
    "PIE807", # unnecessary list-cast — performance-irrelevant
    "PIE808", # unnecessary range start — micro-optimisation
    "PIE810", # multiple-starts-ends-with — readability preference
    "RUF002", # ambiguous-unicode-character-docstring — style preference (en-dash)
    "RUF003", # ambiguous-unicode-character-comment — style preference (en-dash)
    "RUF005", # collection-literal-concatenation — readability preference
    "RUF012", # mutable class attributes annotated with ClassVar
    "RUF022", # unsorted __all__ — readability preference
    "RUF043", # pytest-raises-ambiguous-pattern — sometimes intentional
    "RUF059", # unused-unpacked-variable — readability preference
    "RUF100", # unused-noqa — too noisy when rule families are disabled
    "RET504", # unnecessary assignment before return — style preference
    "RET505", # superfluous-else-return — style preference
    "RET507", # unnecessary-elif-after-continue — readability preference
    "RET508", # unnecessary-elif-after-break — readability preference
    "SIM102", # collapsible-if — sometimes clearer as nested
    "SIM103", # needless-bool — readability preference
    "SIM105", # suppressible-exception — context-manager conversion not always wanted
    "SIM108", # use ternary operator — sometimes clearer as a branch
    "SIM110", # reimplemented-builtin (any(...)) — readability preference
    "SIM112", # capitalized environment variable — sometimes intentional lowercase
    "SIM114", # combine if branches — clarity > brevity in long branches
    "SIM115", # open-file-with-context-handler — sometimes explicit close is clearer
    "SIM117", # multiple-with-statements — readability preference
    "SIM118", # in-dict-keys — readability preference
    "T201",   # print found — left in for ad-hoc debugging
    "ERA001", # commented-out code — sometimes used as reference
    "E402",   # module-import-not-at-top-of-file — common for sys.path bootstrap
    "W293",   # blank-line-with-whitespace — formatter handles
    "I001",   # unsorted-imports — formatter handles
    "S110",   # try-except-pass — sometimes intentional silent ignore
    "S112",   # try-except-continue — sometimes intentional
    "F541",   # f-string-missing-placeholders — sometimes intentional
]

[tool.ruff.lint.per-file-ignores]
# Lazy imports inside functions to avoid circular dependency with
# prometheus.report.dedupe / cvss.
"prometheus/tools/notes/tools.py" = ["PLC0415", "TC002"]
"prometheus/tools/finish/tool.py" = ["PLC0415", "TC002"]
"prometheus/tools/reporting/tool.py" = ["PLC0415", "TC002"]
"prometheus/tools/**/*.py" = [
    "ARG001", # Unused function argument (tools may have unused args for interface consistency)
]
# Backend factories import their backend's deps lazily so deployments
# that pick a different backend don't need every backend's libs installed.
"prometheus/runtime/backends.py" = ["PLC0415"]
# Custom Docker subclass duplicates parent body; some imports are for annotations.
"prometheus/runtime/docker_client.py" = [
    "TC002",  # Manifest, Container imported for annotations
    "TC003",  # uuid imported for annotation
]
# SDK function-tool wrappers: the SDK calls get_type_hints() at registration
# time to derive the JSON schema, which evaluates annotations at runtime —
# so RunContextWrapper / Tool / TResponseInputItem must be imported eagerly,
# not under TYPE_CHECKING.
"prometheus/tools/todo/tools.py" = ["TC002"]
"prometheus/tools/thinking/tool.py" = ["TC002"]
"prometheus/tools/web_search/tool.py" = ["TC002"]
"prometheus/tools/proxy/tools.py" = ["TC002", "PLR0911"]
"prometheus/tools/agents_graph/tools.py" = ["TC002"]
"prometheus/agents/factory.py" = ["TC002"]
# Entry point: ``Path`` is used at runtime by the typing of the
# session_manager call; importing under TYPE_CHECKING would defer
# resolution past where mypy needs it.
"prometheus/core/runner.py" = ["TC003", "PLR0912", "PLR0915", "PLC0415"]
# ReportState carries scan artifact/report fields and
# a runtime ``Callable`` annotation on ``vulnerability_found_callback``.
"prometheus/report/state.py" = ["TC003", "PLR0912", "PLR0915", "E501", "PERF401"]
# Interface utility branches per scope-mode / target-type combination;
# splitting would obscure the decision tree without simplifying it.
"prometheus/interface/utils.py" = ["PLR0912", "BLE001", "PLC0415"]
# CLI / TUI / main keep extensive lazy imports + broad exception
# swallows for resilience around terminal-rendering errors.
"prometheus/interface/cli.py" = ["BLE001", "PLC0415"]
"prometheus/interface/tui/app.py" = ["BLE001", "PLC0415", "PLR0912", "PLR0915", "SIM105"]
"prometheus/interface/main.py" = ["BLE001", "PLC0415", "PLR0912", "PLR0915"]
"prometheus/interface/tui/renderers/agent_message_renderer.py" = ["PLC0415"]

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2
known-first-party = ["prometheus"]
known-third-party = ["pydantic"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# PyRight Configuration (Alternative type checker)
# ============================================================================

[tool.pyright]
include = ["prometheus"]
exclude = ["**/__pycache__", "build", "dist"]
pythonVersion = "3.12"
pythonPlatform = "Linux"

typeCheckingMode = "strict"
# `openai-agents`, `textual`, `rich`, `httpx`, `caido_sdk_client`, and
# `browser_harness` ship incomplete (or zero) type stubs. The
# reportMissingImports and reportUnknown* cascades from these third-party
# surfaces are noise, not real bugs. Suppress at the project level rather
# than peppering `# pyright: ignore` on every call site.
reportMissingImports = false
reportMissingTypeStubs = false
reportGeneralTypeIssues = true
reportPropertyTypeMismatch = true
reportFunctionMemberAccess = true
reportMissingParameterType = true
reportMissingTypeArgument = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportOverlappingOverload = true
reportConstantRedefinition = true
reportImportCycles = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
# `@function_tool` from openai-agents is untyped upstream.
reportUntypedFunctionDecorator = false
# Intentional cross-module access to singleton internals
# (`_consecutive_gate_blocks`, `_conn`, etc.).
reportPrivateUsage = false

# ============================================================================
# Black Configuration (Code Formatter)
# ============================================================================

[tool.black]
line-length = 100
target-version = ['py312']
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ============================================================================
# isort Configuration (Import Sorting)
# ============================================================================

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["prometheus"]
known_third_party = ["pydantic", "litellm"]

# ============================================================================
# Bandit Configuration (Security Linting)
# ============================================================================

[tool.bandit]
exclude_dirs = ["docs", "build", "dist"]
skips = ["B101", "B601", "B404", "B603", "B607"]  # Skip assert, shell injection, subprocess import and partial path checks
severity = "medium"
